# EcosCore

./: .gitignore  ACKNOWLEDGMENTS.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  DOMAINS.md  INTERVIEW_TALKING_POINTS.md  LICENSE  README.md  ROADMAP_SUMMARY.md
.github/workflows/: generate_file_lists.yml
apps/category/: CMakeLists.txt  main.cpp
apps/language/: CMakeLists.txt  main.cpp
apps/meta/: CMakeLists.txt  main.cpp
examples/: CMakeLists.txt  EventHierarchySpecialization.cpp  IntegrationTest.cpp  LoggingCallback.h  MetricsCallback.h  SerializationCallback.h  TimingCallback.h  async_callbacks.cpp  basic_usage.cpp  propagation_control.cpp  utility_callbacks.cpp
examples/ecoscore/: CMakeLists.txt  basic_usage.cpp  propagation_control.cpp  utility_callbacks.cpp
examples/ecoscore/event/core/: EventHierarchySpecializations.cpp
examples/ecoscore/event/util/: LoggingCallbackExamples.cpp
examples/ecoscore/meta/: CycleCheckExample.cpp  TupleConcatExample.cpp  TypeListExample.cpp  VariantConcatExample.cpp
examples/ecoscore/timing/: CustomTimerExample.cpp
examples/ecoscore/type/: ConceptsExample.cpp  StructTypeExample.cpp  TemplateTypeExample.cpp
examples/event/core/: EventDispatcherExamples.cpp
examples/event/metrics/: CustomMetricsExample.cpp
examples/event/serialization/: CustomJsonSerializerExample.cpp
examples/state/: ExamplePriorities.cpp  PriorityStateExamples.cpp
include/EcosCore/: EcosCore.h
include/EcosCore/concepts/: Concepts.h
include/EcosCore/event/: CallbackPhaseState.h  DefaultFallbackCallbacks.h  DefaultPriorityState.h  Event.h  EventCallback.h  EventDispatcher.h  EventHierarchy.h  NullEventDispatcher.h  PriorityState.h  PublicAPI.h  ScopedCallbackHandler.h  StrongTypedefs.h  Types.h  VirtualEventCallback.h.h
include/EcosCore/meta/: CycleCheck.h  Meta.h  Tuple.h  TypeList.h  Variant.h
include/EcosCore/state/: BaseState.h  DefaultPriorityState.h  PriorityState.h  TemplateState.h
include/EcosCore/tag/: CharsetTags.h  LanguageTags.h  NameSet.h  PhaseTags.h  PriorityOrdering.h  Tag.h  (+4 more)
include/ecoscore/: Concepts.h  EcosCoreFwd.h  Meta.h  State.h  Tag.h  Type.h
include/ecoscore/category/: CMakeLists.txt  Categories.h  Category.h  Flow.h  Member.h  Outcome.h  Phase.h
include/ecoscore/category/flow/: Continue.h  Stop.h
include/ecoscore/category/flow/translations/: Continue.h
include/ecoscore/category/outcome/: Fail.h  Partial.h  Pass.h
include/ecoscore/category/phase/: After.h  Before.h  End.h  Error.h  Finalize.h  Main.h  Process.h  Start.h
src/category/: CMakeLists.txt  README.md
src/ecoscore/: CMakeLists.txt  EcosCore.ixx  Meta.ixx  State.ixx  Tag.ixx  Type.ixx  dummy.cpp
src/ecoscore/category/: CMakeLists.txt  Categories.ixx  Category.ixx  Detail.ixx  Flow.ixx  Flows.ixx  Member.ixx  Outcome.ixx  Outcomes.ixx  Phase.ixx  Phases.ixx  Virtual.ixx
src/ecoscore/category/flow/: Continue.ixx  Stop.ixx
src/ecoscore/category/flow/translations/: Continue.ixx
src/ecoscore/category/outcome/: Fail.ixx  Partial.ixx  Pass.ixx
src/ecoscore/category/phase/: After.ixx  Before.ixx  End.ixx  Error.ixx  Finalize.ixx  Main.ixx  Process.ixx  Start.ixx
src/ecoscore/language/: CMakeLists.txt  Charset.ixx  CharsetTags.ixx  Charsets.ixx  EncodingTags.ixx  Encodings.ixx  Lang.ixx  Language.ixx  LanguageTags.ixx  Languages.ixx  Locale.ixx  LocalizedName.ixx  NameSet.ixx  TextRepresentation.ixx  TextRepresentations.ixx  Translation.ixx  Translations.ixx
src/ecoscore/language/charset/: Cyrillic.ixx  Emoji.ixx  Latin1.ixx
src/ecoscore/language/charsets/: Cyrillic.ixx  Emoji.ixx  Latin1.ixx
src/ecoscore/language/encoding/: MacRoman.ixx  UTF32.ixx  Windows1252.ixx
src/ecoscore/language/lang/: ar.ixx  de.ixx  en.ixx  es.ixx  fr.ixx  ja.ixx  ko.ixx  zh_hans.ixx  zh_hant.ixx
src/ecoscore/language/lang/translations/: en.ixx
src/ecoscore/language/textrepresentation/: ISO_8559_1.ixx  UTF16.ixx  UTF8.ixx
src/ecoscore/meta/: CMakeLists.txt  CycleCheck.ixx  Meta.ixx  README.md  Tuple.ixx  TypeList.ixx  Variant.ixx
src/ecoscore/priority/: CMakeLists.txt  Priority.ixx  PriorityOrderingGraph.ixx  PriorityTags.ixx  StaticPriorityOrdering.ixx  VirtualPriorityOrdering.ixx
src/ecoscore/state/: CMakeLists.txt  Category.ixx  Detail.ixx  Flows.ixx  Outcomes.ixx  Phases.ixx  Tag.ixx
src/ecoscore/state/flow/: Continue.ixx  Stop.ixx
src/ecoscore/state/flow/translations/: Continue.ixx
src/ecoscore/state/outcome/: Fail.ixx  Partial.ixx  Pass.ixx
src/ecoscore/state/phase/: After.ixx  Before.ixx  End.ixx  Error.ixx  Finalize.ixx  Main.ixx  Process.ixx  Start.ixx
src/ecoscore/tag/: CMakeLists.txt  Category.ixx  Detail.ixx  FlowTags.ixx  Flows.ixx  OutcomeTags.ixx  Outcomes.ixx  PhaseTags.ixx  Phases.ixx  README.md  Tag.ixx
src/ecoscore/tag/concepts/: Concepts.ixx
src/ecoscore/tag/flow/: Continue.ixx  Stop.ixx
src/ecoscore/tag/flow/translations/: Continue.ixx
src/ecoscore/tag/outcome/: Fail.ixx  Partial.ixx  Pass.ixx
src/ecoscore/tag/phase/: After.ixx  Before.ixx  End.ixx  Error.ixx  Finalize.ixx  Main.ixx  Process.ixx  Start.ixx
src/ecoscore/type/: CMakeLists.txt  Concepts.ixx  README.md  StructType.ixx  TemplateType.ixx  Type.ixx
src/flow/: CMakeLists.txt
src/language/: CMakeLists.txt  README.md
src/meta/: CMakeLists.txt  README.md
src/outcome/: CMakeLists.txt
src/phase/: CMakeLists.txt
src/stl/: CMakeLists.txt
tests/: CMakeLists.txt
tests/EcosCore/: BasicUnitTest.cpp
tests/ecoscore/examples/: ExampleTest1.cpp
tests/ecoscore/examples/meta/: ExampleCycleCheck.cpp
tests/ecoscore/integration/: CMakeLists.txt  IntegrationTest1.cpp
tests/ecoscore/meta/: CycleCheckTests.cpp  TupleTests.cpp  TypeListTests.cpp  VariantTests.cpp
tests/ecoscore/type/: ConceptsTests.cpp  StructTypeTests.cpp  TemplateTypeTests.cpp  TestStructType.cpp
tests/examples/: CMakeLists.txt  ExampleTest1.cpp
tests/integration/: IntegrationTest1.cpp
tests/unit/: BasicUnitTest.cpp  CMakeLists.txt  UnitTest1.cpp
tools/: CMakeLists.txt  README.md  convert_modules_to_headers.py  fix_headers.py  generate_file_lists.py  test_lib.py
(+196 files in other folders)
